[package]
name = "rust-project-reindeer"
version = "0.2.1"
authors = ["Anders Gaustad <anders.gaustad@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_builder = "0.20.2"
godot = { version = "0.4.5", features = ["api-4-5"] }
strum = { version = "0.26", features = ["derive"] }
